--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.output.ansi.enabled=ALWAYS
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -7,9 +9,9 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/share
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
-
+hibernate.show_sql=true
 
