--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=sa
 spring.datasource.password=password
-hibernate.show_sql=true
+spring.datasource.driver-class-name=org.h2.Driver
+
