--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
@@ -7,8 +7,6 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-# TODO Append connection to DB
-spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.url=jdbc:postgresql://db:5432/shareit
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
