--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
@@ -7,6 +8,6 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.url=jdbc:postgresql://db:5432/shareit
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=password
