--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,19 +1,14 @@
 spring.output.ansi.enabled=ALWAYS
-
+server.port=9090
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 spring.sql.init.mode=always
-
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
-spring.datasource.url=jdbc:postgresql://localhost:5434/shareit
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=postgres
 spring.datasource.password=m
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
+hibernate.show_sql=true
